--- a/bin/lib/.gitignore
+++ b/bin/lib/.gitignore
@@ -547,6 +547,8 @@
 /TempTestCase1615775206443.class
 /TempTestCase1615776133580.class
 /TempTestCase1615776620924.class
+/TempTestCase1615794295103.class
+/TempTestCase1615794380221.class
 /TempTestSuite1560315851389.class
 /TempTestSuite1560320807761.class
 /TempTestSuite1560320912792.class
